src/Server/k8s/istio/gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: restaurant-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: restaurant-vs
spec:
  hosts:
  - "*"
  gateways:
  - restaurant-gateway
  http:
  - match:
    - uri:
        prefix: /menu
    route:
    - destination:
        host: menu-api
        port:
          number: 80
  - match:
    - uri:
        prefix: /identity
    route:
    - destination:
        host: identity-api
        port:
          number: 80
  - match:
    - uri:
        prefix: /order
    route:
    - destination:
        host: order-api
        port:
          number: 80
  - match:
    - uri:
        prefix: /basket
    route:
    - destination:
        host: basket-api
        port:
          number: 80
  - match:
    - uri:
        prefix: /dashboard
    rewrite:
      uri: /
    route:
    - destination:
        host: dashboard-app
        port:
          number: 80
